contrib/aws-production/cluster/template.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description": "Deis on EC2: http://deis.io/",
  "Parameters" : {
    "KeyPair" : {
      "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the Deis hosts",
      "Type" : "String",
      "MinLength": "1",
      "MaxLength": "64",
      "AllowedPattern" : "[-_ a-zA-Z0-9]*",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription" : "can contain only alphanumeric characters, spaces, dashes and underscores."
    },
    "IamInstanceProfile" : {
      "Description" : "(Optional) Set IAM instance profile for Deis hosts (default: none)",
      "Type" : "String",
      "Default": ""
    },
    "VPC" : {
      "Description" : "VPC ID to provision Deis into",
      "Type" : "AWS::EC2::VPC::Id",
      "Default" : ""
    },
    "VPCAvailabilityZones" : {
      "Description" : "Availability Zones for the VPC defined",
      "Type" : "List<AWS::EC2::AvailabilityZone::Name>",
      "Default" : ""
    },
    "VPCPublicSubnets" : {
      "Description" : "Public Subnets for the VPC defined",
      "Type" : "List<AWS::EC2::Subnet::Id>",
      "Default" : ""
    },
    "VPCPrivateSubnets" : {
      "Description" : "Private Subnets for the VPC defined",
      "Type" : "List<AWS::EC2::Subnet::Id>",
      "Default" : ""
    },
    "SSHFrom" : {
      "Description" : "Lockdown SSH access to the Deis hosts (default: can be accessed from anywhere)",
      "Type" : "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default" : "0.0.0.0/0",
      "AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
    },
    "BastionSecurityGroupID" : {
      "Description" : "Lockdown SSH access to bastion server",
      "Type" : "AWS::EC2::SecurityGroup::Id",
      "MinLength" : "1",
      "MaxLength" : "11",
      "Default" : "",
      "AllowedPattern" : "sg-[0-9abcdef]*",
      "ConstraintDescription" : "'sg-' plus 8 hex digits"
    },
    "InstanceType" : {
      "Description" : "EC2 instance type (see http://aws.amazon.com/ec2/instance-types/)",
      "Type" : "String",
      "Default" : "m3.large",
      "AllowedValues" : [
        "m3.medium",
        "m3.large",
        "m3.xlarge",
        "m3.2xlarge",
        "m4.large",
        "m4.xlarge",
        "m4.2xlarge",
        "m4.4xlarge",
        "m4.10xlarge",
        "m1.medium",
        "m1.large",
        "m1.xlarge",
        "c3.large",
        "c3.xlarge",
        "c3.2xlarge",
        "c3.4xlarge",
        "c3.8xlarge",
        "c4.large",
        "c4.xlarge",
        "c4.2xlarge",
        "c4.4xlarge",
        "c4.8xlarge",
        "c1.medium",
        "c1.xlarge",
        "cc2.8xlarge",
        "g2.2xlarge",
        "cg1.4xlarge",
        "m2.xlarge",
        "m2.4xlarge",
        "cr1.8xlarge",
        "hi1.4xlarge",
        "hs1.8xlarge",
        "i2.xlarge",
        "i2.2xlarge",
        "i2.4xlarge",
        "i2.8xlarge",
        "r3.large",
        "r3.xlarge",
        "r3.2xlarge",
        "r3.4xlarge",
        "r3.8xlarge",
        "t2.medium"
      ],
      "ConstraintDescription" : "must be a valid EC2 instance type."
    },
    "EC2VirtualizationType" : {
      "Description" : "EC2 AMI virtualization type (see http://aws.amazon.com/amazon-linux-ami/instance-type-matrix/)",
      "Type": "String",
      "Default": "HVM",
      "AllowedValues" : [ "PV", "HVM" ],
      "ConstraintDescription" : "must be either PV or HVM"
    },
    "EC2EBSVolumeType" : {
      "Description" : "EC2 EBS VolumeType",
      "Type": "String",
      "Default": "gp2",
      "AllowedValues" : [ "gp2", "standard" ],
      "ConstraintDescription" : "must be either 'gp2' for SSD or 'standard' for magnetic (provisioned iOPS requires further manual changes)"
    },
    "AssociatePublicIP": {
      "Description": "Whether to associate a public IP address to the instances",
      "Type": "String",
      "Default": "false",
      "AllowedValues" : [ "true", "false" ],
      "ConstraintDescription" : "must be either true or false"
    },
    "ELBScheme": {
      "Description": "Whether to create an internal-only load balancer, or a public-facing one (default)",
      "Type": "String",
      "Default": "internet-facing",
      "AllowedValues" : [ "internet-facing", "internal" ],
      "ConstraintDescription" : "must be either 'internet-facing' for public use, or 'internal' for private use"
    },
    "RootVolumeSize": {
      "Description": "Desired size of the root volume, in GB",
      "Type": "Number",
      "Default": "50"
    },
    "DockerVolumeSize": {
      "Description": "Desired size of the Docker volume, in GB",
      "Type": "Number",
      "Default": "100"
    },
    "EtcdVolumeSize": {
      "Description": "Desired size of the etcd volume, in GB",
      "Type": "Number",
      "Default": "10"
    }
  },

  "Mappings" : {
    "CoreOSAMIs" : {},
    "VPCSubnets" : {},
    "RootDevices" : {
      "HVM" : { "Name": "/dev/xvda" },
      "PV"  : { "Name": "/dev/sda" }
    }
  },

  "Conditions" : {
    "UseIamInstanceProfile" : {
      "Fn::Not" : [{
        "Fn::Equals" : [
          { "Ref" : "IamInstanceProfile" },
           ""
        ]
      }]
    }
  },

  "Resources" : {
    "DNS" : {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "HostedZoneConfig": {
          "Comment": "Private DNS for etcd cluster"
        },
        "Name": { "Fn::Join" : [ "", [ "etcd-", { "Ref": "AWS::StackName" }, ".internal." ] ] },
        "VPCs": [{
          "VPCId": { "Ref" : "VPC" },
          "VPCRegion": { "Ref" : "AWS::Region" }
        }],
        "HostedZoneTags" : [{
          "Key": "Name",
          "Value": "etcd"
        }]
      }
    },

    "etcdInternalDNS" : {
      "Type" : "AWS::Route53::RecordSetGroup",
      "Properties" : {
        "HostedZoneName" : { "Fn::Join" : [ "", [ "etcd-", { "Ref": "AWS::StackName" }, ".internal." ] ] },
        "Comment" : "DNS for etcd cluster.",
        "RecordSets" : [
          {
            "Name" : { "Fn::Join" : [ "", [ "_etcd-server._tcp.", "etcd-", { "Ref": "AWS::StackName" }, ".internal." ] ] },
            "Type" : "SRV",
            "TTL" : "20",
            "ResourceRecords" : []
          }
        ]
      },
      "DependsOn" : ["DNS"]
    },

    "DeisWebELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Scheme" : {"Ref": "ELBScheme"},
        "HealthCheck": {
          "HealthyThreshold": "4",
          "Interval": "15",
          "Target": "HTTP:9090/health-check",
          "Timeout": "5",
          "UnhealthyThreshold": "2"
        },
        "Subnets": { "Ref" : "VPCPublicSubnets" },
        "Policies" : [{
           "PolicyName" : "EnableProxyProtocol",
           "PolicyType" : "ProxyProtocolPolicyType",
           "Attributes" : [{
              "Name"  : "ProxyProtocol",
              "Value" : "true"
           }],
           "InstancePorts" : ["80", "443"]
        }],
        "Listeners": [
          {
            "InstancePort": "80",
            "InstanceProtocol": "TCP",
            "LoadBalancerPort": "80",
            "Protocol": "TCP"
          },
          {
            "InstancePort": "443",
            "InstanceProtocol": "TCP",
            "LoadBalancerPort": "443",
            "Protocol": "TCP"
          },
          {
            "InstancePort": "2222",
            "InstanceProtocol": "TCP",
            "LoadBalancerPort": "2222",
            "Protocol": "TCP"
          }
        ],
        "SecurityGroups": [
          {
            "Fn::GetAtt": ["DeisWebELBSecurityGroup", "GroupId"]
          }
        ],
        "ConnectionSettings": {
          "IdleTimeout": 1200
        },
        "Instances" : []
      }
    },
    "DeisWebELBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Deis Web ELB SecurityGroup",
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": "2222", "ToPort": "2222", "CidrIp": "0.0.0.0/0"}
        ],
        "VpcId": { "Ref" : "VPC" }
      }
    },
    "CoreOSSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Enable public SSH and intra-VPC communication",
        "SecurityGroupIngress" : [
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort" : "22", "CidrIp" : { "Ref" : "SSHFrom" }},
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "SourceSecurityGroupId": { "Ref": "BastionSecurityGroupID" } },
          {"IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Ref": "DeisWebELBSecurityGroup" } },
          {"IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "SourceSecurityGroupId": { "Ref": "DeisWebELBSecurityGroup" } },
          {"IpProtocol": "tcp", "FromPort": "2222", "ToPort": "2222", "SourceSecurityGroupId": { "Ref": "DeisWebELBSecurityGroup" } },
          {"IpProtocol": "tcp", "FromPort": "9090", "ToPort": "9090", "SourceSecurityGroupId": { "Ref": "DeisWebELBSecurityGroup" } }
        ],
        "VpcId" : { "Ref" : "VPC" }
      }
    },
    "CoreOSSecurityGroupIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "CoreOSSecurityGroup" },
        "IpProtocol": "-1",
        "FromPort": "0",
        "ToPort": "65535",
        "SourceSecurityGroupId": { "Ref": "CoreOSSecurityGroup" }
      }
    }
  },
  "Outputs" : {
    "DNSName" : {
      "Description" : "DNS Name of the ELB",
      "Value" :  { "Fn::GetAtt" : ["DeisWebELB", "DNSName"] }
    }
  }
}
